--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "postinstall": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.17",
-    "@angular/cli": "~12.2.18",
-    "@angular/common": "~12.2.17",
-    "@angular/compiler": "~12.2.17",
-    "@angular/compiler-cli": "~12.2.17",
-    "@angular/core": "~12.2.17",
-    "@angular/forms": "~12.2.17",
-    "@angular/platform-browser": "~12.2.17",
-    "@angular/platform-browser-dynamic": "~12.2.17",
-    "@angular/router": "~12.2.17",
+    "@angular/animations": "~13.3.12",
+    "@angular/cli": "~13.3.11",
+    "@angular/common": "~13.3.12",
+    "@angular/compiler": "~13.3.12",
+    "@angular/compiler-cli": "~13.3.12",
+    "@angular/core": "~13.3.12",
+    "@angular/forms": "~13.3.12",
+    "@angular/platform-browser": "~13.3.12",
+    "@angular/platform-browser-dynamic": "~13.3.12",
+    "@angular/router": "~13.3.12",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
-    "rxjs": "~6.6.7",
+    "rxjs": "~7.4.0",
     "sqlite3": "^5.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular-devkit/build-angular": "~13.3.11",
     "@angular/language-service": "~9.1.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
