--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.2.10",
-    "@angular/cli": "~15.2.10",
-    "@angular/common": "~15.2.10",
-    "@angular/compiler": "~15.2.10",
-    "@angular/compiler-cli": "~15.2.10",
-    "@angular/core": "~15.2.10",
-    "@angular/forms": "~15.2.10",
-    "@angular/platform-browser": "~15.2.10",
-    "@angular/platform-browser-dynamic": "~15.2.10",
-    "@angular/router": "~15.2.10",
+    "@angular/animations": "16.2.12",
+    "@angular/cli": "16.2.12",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
-    "rxjs": "~7.8.1",
+    "rxjs": "7.8.1",
     "sqlite3": "^5.0.2",
-    "tslib": "^2.5.0",
+    "tslib": "2.6.2",
     "zone.js": "~0.11.4",
-    "typescript": "~4.8.4"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.10",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "16.2.12",
+    "@angular/language-service": "16.2.12",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~16.18.36",
+    "@types/node": "18.17.15",
     "@types/sqlite3": "^3.1.7",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
