--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "rxjs": "7.8.1",
     "sqlite3": "^5.0.2",
     "tslib": "2.6.2",
-    "zone.js": "~0.14.10",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.21",
@@ -38,17 +38,15 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "18.17.15",
     "@types/sqlite3": "^3.1.7",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.4.4",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0"
+    "ts-node": "~7.0.0"
   },
   "engines": {
     "node": "14.17.5",
